修改bat支持JDK 18启动