@@ -3,13 +3,24 @@
 :Run
 cls
 
-javac -version
+::修改这里指定需要使用的JDK（\结尾bin目录完整路径），否则将使用已安装的默认JDK
+set jdkBinDir=
+::set jdkBinDir=D:\xxxx\jdk-18_windows-x64_bin\jdk-18.0.2.1\bin\
+
+if "%jdkBinDir%"=="" (
+	echo 正在读取JDK版本（如需指定JDK为特定版本或目录，请修改本bat文件内jdkBinDir为JDK bin目录）：
+) else (
+	echo 正在读取JDK（%jdkBinDir%）版本：
+)
+
+
+%jdkBinDir%javac -version
 if errorlevel 1 (
 	echo 需要安装JDK才能编译运行java文件
 	goto Pause
 )
 
-javac -encoding utf-8 -Djava.ext.dirs=./ *.java
+%jdkBinDir%javac -encoding utf-8 -cp ./*.jar *.java
 if errorlevel 1 (
 	echo java文件编译失败
 	goto Pause
@@ -24,7 +35,7 @@ if not exist %dir% (
 move *.class %dir% > nul
 
 echo java -Xmx300m Test -cmd 已限制java最大允许使用300M内存
-java -Djava.ext.dirs=./ -Xmx300m com.github.xiangyuecn.areacity.query.Test -cmd
+%jdkBinDir%java -cp ./;./* -Xmx300m com.github.xiangyuecn.areacity.query.Test -cmd
 
 :Pause
 pause
